Examples/CPP_GeometryKernel/Engine/engine.h



//
//  File IO / Stream / Copy API Calls
//

//
//		CreateModel                                 (http://rdf.bg/gkdoc/CP64/CreateModel.html)
//				int64_t				returns								OUT
//
//	This function creates and empty model.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	CreateModel(
								);


//
//		OpenModel                                   (http://rdf.bg/gkdoc/CP64/OpenModel.html)
//				const char			* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function opens the model on location file name.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModel(
									const char			* fileName
								);


//
//		OpenModelW                                  (http://rdf.bg/gkdoc/CP64/OpenModelW.html)
//				const wchar_t		* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function opens the model on location file name.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModelW(
									const wchar_t		* fileName
								);


//
//		OpenModelS                                  (http://rdf.bg/gkdoc/CP64/OpenModelS.html)
//				const void			* callback							IN
//
//				int64_t				returns								OUT
//
//	This function opens the model via a stream.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModelS(
									const void			* callback
								);


//
//		OpenModelA                                  (http://rdf.bg/gkdoc/CP64/OpenModelA.html)
//				const unsigned char	* content							IN
//				int64_t				size								IN
//
//				int64_t				returns								OUT
//
//	This function opens the model via an array.
//	References inside to other ontologies will be included.
//	A handle to the model will be returned, or 0 in case something went wrong.
//
int64_t		DECL STDC	OpenModelA(
									const unsigned char	* content,
									int64_t				size
								);


//
//		ImportModel                                 (http://rdf.bg/gkdoc/CP64/ImportModel.html)
//				int64_t				model								IN
//				const char			* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function imports a design tree on location file name.
//	The design tree will be added to the given existing model.
//	The return value contains the first instance not referenced by any other instance or zero 
//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
//	unique and equal to the instance used within the call SaveInstanceTree().
//
int64_t		DECL STDC	ImportModel(
									int64_t				model,
									const char			* fileName
								);


//
//		ImportModelW                                (http://rdf.bg/gkdoc/CP64/ImportModelW.html)
//				int64_t				model								IN
//				const wchar_t		* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function imports a design tree on location file name.
//	The design tree will be added to the given existing model.
//	The return value contains the first instance not referenced by any other instance or zero 
//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
//	unique and equal to the instance used within the call SaveInstanceTree().
//
int64_t		DECL STDC	ImportModelW(
									int64_t				model,
									const wchar_t		* fileName
								);


//
//		ImportModelS                                (http://rdf.bg/gkdoc/CP64/ImportModelS.html)
//				int64_t				model								IN
//				const void			* callback							IN
//
//				int64_t				returns								OUT
//
//	This function imports a design tree via a stream.
//	The design tree will be added to the given existing model.
//	The return value contains the first instance not referenced by any other instance or zero 
//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
//	unique and equal to the instance used within the call SaveInstanceTree().
//
int64_t		DECL STDC	ImportModelS(
									int64_t				model,
									const void			* callback
								);


//
//		ImportModelA                                (http://rdf.bg/gkdoc/CP64/ImportModelA.html)
//				int64_t				model								IN
//				const unsigned char	* content							IN
//				int64_t				size								IN
//
//				int64_t				returns								OUT
//
//	This function imports a design tree via an array.
//	The design tree will be added to the given existing model.
//	The return value contains the first instance not referenced by any other instance or zero 
//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
//	unique and equal to the instance used within the call SaveInstanceTree().
//
int64_t		DECL STDC	ImportModelA(
									int64_t				model,
									const unsigned char	* content,
									int64_t				size
								);


//
//		SaveInstanceTree                            (http://rdf.bg/gkdoc/CP64/SaveInstanceTree.html)
//				int64_t				owlInstance							IN
//				const char			* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies on location file name.
//
int64_t		DECL STDC	SaveInstanceTree(
									int64_t				owlInstance,
									const char			* fileName
								);


//
//		SaveInstanceTreeW                           (http://rdf.bg/gkdoc/CP64/SaveInstanceTreeW.html)
//				int64_t				owlInstance							IN
//				const wchar_t		* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies on location file name.
//
int64_t		DECL STDC	SaveInstanceTreeW(
									int64_t				owlInstance,
									const wchar_t		* fileName
								);


//
//		SaveInstanceTreeS                           (http://rdf.bg/gkdoc/CP64/SaveInstanceTreeS.html)
//				int64_t				owlInstance							IN
//				const void			* callback							IN
//				int64_t				size								IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies in a stream.
//
int64_t		DECL STDC	SaveInstanceTreeS(
									int64_t				owlInstance,
									const void			* callback,
									int64_t				size
								);


//
//		SaveInstanceTreeA                           (http://rdf.bg/gkdoc/CP64/SaveInstanceTreeA.html)
//				int64_t				owlInstance							IN
//				unsigned char		* content							IN / OUT
//				int64_t				* size								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies in an array.
//
int64_t		DECL STDC	SaveInstanceTreeA(
									int64_t				owlInstance,
									unsigned char		* content,
									int64_t				* size
								);


//
//		SaveInstanceNetwork                         (http://rdf.bg/gkdoc/CP64/SaveInstanceNetwork.html)
//				int64_t				owlInstance							IN
//				bool				includeInverseRelations				IN
//				const char			* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies on location file name.
//
int64_t		DECL STDC	SaveInstanceNetwork(
									int64_t				owlInstance,
									bool				includeInverseRelations,
									const char			* fileName
								);


//
//		SaveInstanceNetworkW                        (http://rdf.bg/gkdoc/CP64/SaveInstanceNetworkW.html)
//				int64_t				owlInstance							IN
//				bool				includeInverseRelations				IN
//				const wchar_t		* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies on location file name.
//
int64_t		DECL STDC	SaveInstanceNetworkW(
									int64_t				owlInstance,
									bool				includeInverseRelations,
									const wchar_t		* fileName
								);


//
//		SaveInstanceNetworkS                        (http://rdf.bg/gkdoc/CP64/SaveInstanceNetworkS.html)
//				int64_t				owlInstance							IN
//				bool				includeInverseRelations				IN
//				const void			* callback							IN
//				int64_t				size								IN
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies in a stream.
//
int64_t		DECL STDC	SaveInstanceNetworkS(
									int64_t				owlInstance,
									bool				includeInverseRelations,
									const void			* callback,
									int64_t				size
								);


//
//		SaveInstanceNetworkA                        (http://rdf.bg/gkdoc/CP64/SaveInstanceNetworkA.html)
//				int64_t				owlInstance							IN
//				bool				includeInverseRelations				IN
//				unsigned char		* content							IN / OUT
//				int64_t				* size								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function saves the selected instance and its dependancies in an array.
//
int64_t		DECL STDC	SaveInstanceNetworkA(
									int64_t				owlInstance,
									bool				includeInverseRelations,
									unsigned char		* content,
									int64_t				* size
								);


//
//		SaveModel                                   (http://rdf.bg/gkdoc/CP64/SaveModel.html)
//				int64_t				model								IN
//				const char			* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the current model on location file name.
//
int64_t		DECL STDC	SaveModel(
									int64_t				model,
									const char			* fileName
								);


//
//		SaveModelW                                  (http://rdf.bg/gkdoc/CP64/SaveModelW.html)
//				int64_t				model								IN
//				const wchar_t		* fileName							IN
//
//				int64_t				returns								OUT
//
//	This function saves the current model on location file name.
//
int64_t		DECL STDC	SaveModelW(
									int64_t				model,
									const wchar_t		* fileName
								);


//
//		SaveModelS                                  (http://rdf.bg/gkdoc/CP64/SaveModelS.html)
//				int64_t				model								IN
//				const void			* callback							IN
//				int64_t				size								IN
//
//				int64_t				returns								OUT
//
//	This function saves the current model in a stream.
//
int64_t		DECL STDC	SaveModelS(
									int64_t				model,
									const void			* callback,
									int64_t				size
								);


//
//		SaveModelA                                  (http://rdf.bg/gkdoc/CP64/SaveModelA.html)
//				int64_t				model								IN
//				unsigned char		* content							IN / OUT
//				int64_t				* size								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function saves the current model in an array.
//
int64_t		DECL STDC	SaveModelA(
									int64_t				model,
									unsigned char		* content,
									int64_t				* size
								);