engine.cs


        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate Int64 ReadCallBackFunction(IntPtr value);

        [UnmanagedFunctionPointer(CallingConvention.StdCall)]
        public delegate void WriteCallBackFunction(IntPtr value, Int64 size);

		//
		//		CreateModel                                 (http://rdf.bg/gkdoc/CS64/CreateModel.html)
		//
		//	This function creates and empty model.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(EngineDLL, EntryPoint = "CreateModel")]
        public static extern Int64 CreateModel();

		//
		//		OpenModel                                   (http://rdf.bg/gkdoc/CS64/OpenModel.html)
		//
		//	This function opens the model on location file name.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(EngineDLL, EntryPoint = "OpenModel")]
        public static extern Int64 OpenModel(string fileName);

        [DllImport(EngineDLL, EntryPoint = "OpenModel")]
        public static extern Int64 OpenModel(byte[] fileName);

		//
		//		OpenModelW                                  (http://rdf.bg/gkdoc/CS64/OpenModelW.html)
		//
		//	This function opens the model on location file name.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(EngineDLL, EntryPoint = "OpenModelW")]
        public static extern Int64 OpenModelW(string fileName);

        [DllImport(EngineDLL, EntryPoint = "OpenModelW")]
        public static extern Int64 OpenModelW(byte[] fileName);

		//
		//		OpenModelS                                  (http://rdf.bg/gkdoc/CS64/OpenModelS.html)
		//
		//	This function opens the model via a stream.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(EngineDLL, EntryPoint = "OpenModelS")]
        public static extern Int64 OpenModelS([MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback);

		//
		//		OpenModelA                                  (http://rdf.bg/gkdoc/CS64/OpenModelA.html)
		//
		//	This function opens the model via an array.
		//	References inside to other ontologies will be included.
		//	A handle to the model will be returned, or 0 in case something went wrong.
		//
        [DllImport(EngineDLL, EntryPoint = "OpenModelA")]
        public static extern Int64 OpenModelA(byte[] content, Int64 size);

		//
		//		ImportModel                                 (http://rdf.bg/gkdoc/CS64/ImportModel.html)
		//
		//	This function imports a design tree on location file name.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(EngineDLL, EntryPoint = "ImportModel")]
        public static extern Int64 ImportModel(Int64 model, string fileName);

        [DllImport(EngineDLL, EntryPoint = "ImportModel")]
        public static extern Int64 ImportModel(Int64 model, byte[] fileName);

		//
		//		ImportModelW                                (http://rdf.bg/gkdoc/CS64/ImportModelW.html)
		//
		//	This function imports a design tree on location file name.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(EngineDLL, EntryPoint = "ImportModelW")]
        public static extern Int64 ImportModelW(Int64 model, string fileName);

        [DllImport(EngineDLL, EntryPoint = "ImportModelW")]
        public static extern Int64 ImportModelW(Int64 model, byte[] fileName);

		//
		//		ImportModelS                                (http://rdf.bg/gkdoc/CS64/ImportModelS.html)
		//
		//	This function imports a design tree via a stream.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(EngineDLL, EntryPoint = "ImportModelS")]
        public static extern Int64 ImportModelS(Int64 model, [MarshalAs(UnmanagedType.FunctionPtr)] ReadCallBackFunction callback);

		//
		//		ImportModelA                                (http://rdf.bg/gkdoc/CS64/ImportModelA.html)
		//
		//	This function imports a design tree via an array.
		//	The design tree will be added to the given existing model.
		//	The return value contains the first instance not referenced by any other instance or zero 
		//	if it does not exist. In case the imported model is created with SaveInstanceTree() this instance is 
		//	unique and equal to the instance used within the call SaveInstanceTree().
		//
        [DllImport(EngineDLL, EntryPoint = "ImportModelA")]
        public static extern Int64 ImportModelA(Int64 model, byte[] content, Int64 size);

		//
		//		SaveInstanceTree                            (http://rdf.bg/gkdoc/CS64/SaveInstanceTree.html)
		//
		//	This function saves the selected instance and its dependancies on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTree")]
        public static extern Int64 SaveInstanceTree(Int64 owlInstance, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTree")]
        public static extern Int64 SaveInstanceTree(Int64 owlInstance, byte[] fileName);

		//
		//		SaveInstanceTreeW                           (http://rdf.bg/gkdoc/CS64/SaveInstanceTreeW.html)
		//
		//	This function saves the selected instance and its dependancies on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTreeW")]
        public static extern Int64 SaveInstanceTreeW(Int64 owlInstance, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTreeW")]
        public static extern Int64 SaveInstanceTreeW(Int64 owlInstance, byte[] fileName);

		//
		//		SaveInstanceTreeS                           (http://rdf.bg/gkdoc/CS64/SaveInstanceTreeS.html)
		//
		//	This function saves the selected instance and its dependancies in a stream.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTreeS")]
        public static extern Int64 SaveInstanceTreeS(Int64 owlInstance, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, Int64 size);

		//
		//		SaveInstanceTreeA                           (http://rdf.bg/gkdoc/CS64/SaveInstanceTreeA.html)
		//
		//	This function saves the selected instance and its dependancies in an array.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceTreeA")]
        public static extern Int64 SaveInstanceTreeA(Int64 owlInstance, byte[] content, out Int64 size);

		//
		//		SaveInstanceNetwork                         (http://rdf.bg/gkdoc/CS64/SaveInstanceNetwork.html)
		//
		//	This function saves the selected instance and its dependancies on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetwork")]
        public static extern Int64 SaveInstanceNetwork(Int64 owlInstance, byte includeInverseRelations, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetwork")]
        public static extern Int64 SaveInstanceNetwork(Int64 owlInstance, byte includeInverseRelations, byte[] fileName);

		//
		//		SaveInstanceNetworkW                        (http://rdf.bg/gkdoc/CS64/SaveInstanceNetworkW.html)
		//
		//	This function saves the selected instance and its dependancies on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetworkW")]
        public static extern Int64 SaveInstanceNetworkW(Int64 owlInstance, byte includeInverseRelations, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetworkW")]
        public static extern Int64 SaveInstanceNetworkW(Int64 owlInstance, byte includeInverseRelations, byte[] fileName);

		//
		//		SaveInstanceNetworkS                        (http://rdf.bg/gkdoc/CS64/SaveInstanceNetworkS.html)
		//
		//	This function saves the selected instance and its dependancies in a stream.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetworkS")]
        public static extern Int64 SaveInstanceNetworkS(Int64 owlInstance, byte includeInverseRelations, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, Int64 size);

		//
		//		SaveInstanceNetworkA                        (http://rdf.bg/gkdoc/CS64/SaveInstanceNetworkA.html)
		//
		//	This function saves the selected instance and its dependancies in an array.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveInstanceNetworkA")]
        public static extern Int64 SaveInstanceNetworkA(Int64 owlInstance, byte includeInverseRelations, byte[] content, out Int64 size);

		//
		//		SaveModel                                   (http://rdf.bg/gkdoc/CS64/SaveModel.html)
		//
		//	This function saves the current model on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveModel")]
        public static extern Int64 SaveModel(Int64 model, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveModel")]
        public static extern Int64 SaveModel(Int64 model, byte[] fileName);

		//
		//		SaveModelW                                  (http://rdf.bg/gkdoc/CS64/SaveModelW.html)
		//
		//	This function saves the current model on location file name.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveModelW")]
        public static extern Int64 SaveModelW(Int64 model, string fileName);

        [DllImport(EngineDLL, EntryPoint = "SaveModelW")]
        public static extern Int64 SaveModelW(Int64 model, byte[] fileName);

		//
		//		SaveModelS                                  (http://rdf.bg/gkdoc/CS64/SaveModelS.html)
		//
		//	This function saves the current model in a stream.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveModelS")]
        public static extern Int64 SaveModelS(Int64 model, [MarshalAs(UnmanagedType.FunctionPtr)] WriteCallBackFunction callback, Int64 size);

		//
		//		SaveModelA                                  (http://rdf.bg/gkdoc/CS64/SaveModelA.html)
		//
		//	This function saves the current model in an array.
		//
        [DllImport(EngineDLL, EntryPoint = "SaveModelA")]
        public static extern Int64 SaveModelA(Int64 model, byte[] content, out Int64 size);
